apps/aimtrix/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: aimtrix
  namespace: aimtrix
spec:
  type: ClusterIP
  selector:
    app: aimtrix
  ports:
    - name: http
      port: 80
      targetPort: http
      protocol: TCP
